--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,36 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-header translucent>
+      <ion-toolbar color="secondary">
 
+        <ion-title>IBM SCL Sales Enablement Tool</ion-title>
+
+        <ion-buttons slot="primary" color="">
+          <ion-button fill="outline" color="light">
+          	Add Account
+          </ion-button>
+        </ion-buttons>
+      </ion-toolbar>
+    </ion-header>
 <ion-content>
   <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
+    <p>The IBM SCL Sales Enablement Tool was created to assist in finding new opportunity within your clients. It provides a guide to fill out information about your client to eventually lead you to new conversations.</p>
   </div>
+
+<ion-card>
+	  <ion-item>
+	<ion-card-header>
+    <ion-card-title>This is a longer title</ion-card-title>
+        <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+
+  </ion-card-header>
+    <ion-icon name="pin" slot="start"></ion-icon>
+    <ion-label>ion-item in a card, icon left, button right</ion-label>
+    <ion-button fill="outline" slot="end">View</ion-button>
+  </ion-item>
+
+  <ion-card-content>
+    This is content, without any paragraph or header tags,
+    within an ion-card-content element.
+  </ion-card-content>
+</ion-card>
+
 </ion-content>
