--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -4,7 +4,7 @@
         <ion-title>IBM SCL Sales Enablement Tool</ion-title>
 
         <ion-buttons slot="primary" color="">
-          <ion-button fill="outline" color="light">
+          <ion-button fill="outline" color="light" (click)="presentAlert()">
           	Add Account
           </ion-button>
         </ion-buttons>
@@ -18,19 +18,66 @@
 <ion-card>
 	  <ion-item>
 	<ion-card-header>
-    <ion-card-title>This is a longer title</ion-card-title>
-        <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+    <ion-card-title>Company ABC</ion-card-title>
+        <ion-card-subtitle>Alphabet Town, USA</ion-card-subtitle>
 
   </ion-card-header>
-    <ion-icon name="pin" slot="start"></ion-icon>
-    <ion-label>ion-item in a card, icon left, button right</ion-label>
+    <ion-icon name="contacts" slot="start"></ion-icon>
+    <ion-label text-wrap>Last updated: 10-10-19</ion-label>
+    <ion-button fill="outline" slot="end" href="/acct-info">View</ion-button>
+  </ion-item>
+
+  <ion-card-content>
+    This is content, describing any specific footnotes, contacts, etc for the client. It can be any length desired
+  </ion-card-content>
+</ion-card>
+
+<ion-card>
+	  <ion-item>
+	<ion-card-header>
+    <ion-card-title>Company ABC</ion-card-title>
+        <ion-card-subtitle>Alphabet Town, USA</ion-card-subtitle>
+
+  </ion-card-header>
+    <ion-icon name="contacts" slot="start"></ion-icon>
+    <ion-label text-wrap>Last updated: 10-10-19</ion-label>
+    <ion-button fill="outline" slot="end" href="/acct-info">View</ion-button>
+  </ion-item>
+
+  <ion-card-content>
+    This is content, describing any specific footnotes, contacts, etc for the client. It can be any length desired
+  </ion-card-content>
+</ion-card>
+<ion-card>
+	  <ion-item>
+	<ion-card-header>
+    <ion-card-title>Company ABC</ion-card-title>
+        <ion-card-subtitle>Alphabet Town, USA</ion-card-subtitle>
+
+  </ion-card-header>
+    <ion-icon name="contacts" slot="start"></ion-icon>
+    <ion-label text-wrap>Last updated: 10-10-19</ion-label>
     <ion-button fill="outline" slot="end">View</ion-button>
   </ion-item>
 
   <ion-card-content>
-    This is content, without any paragraph or header tags,
-    within an ion-card-content element.
+    This is content, describing any specific footnotes, contacts, etc for the client. It can be any length desired
   </ion-card-content>
 </ion-card>
+<ion-card>
+	  <ion-item>
+	<ion-card-header>
+    <ion-card-title>Company ABC</ion-card-title>
+        <ion-card-subtitle>Alphabet Town, USA</ion-card-subtitle>
 
+  </ion-card-header>
+    <ion-icon name="contacts" slot="start"></ion-icon>
+    <ion-label text-wrap>Last updated: 10-10-19</ion-label>
+    <ion-button fill="outline" slot="end">View</ion-button>
+  </ion-item>
+
+  <ion-card-content>
+    This is content, describing any specific footnotes, contacts, etc for the client. It can be any length desired
+  </ion-card-content>
+</ion-card>
 </ion-content>
