--- a/src/app/entitled-deployed/entitled-deployed.page.html
+++ b/src/app/entitled-deployed/entitled-deployed.page.html
@@ -1,9 +1,101 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>entitled-deployed</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-header translucent>
+      <ion-toolbar color="secondary">
+      	 <ion-buttons slot="start" color="">
+          <ion-button href="/acct-info">Go Back</ion-button>
+        </ion-buttons>
+        <ion-title>IBM Entitled and Deployed Products</ion-title>  
+      </ion-toolbar>
+    </ion-header>
 
 <ion-content>
-
+<ion-card>
+	  <ion-item>
+	<ion-card-header>
+    <ion-card-title>Data Science and AI</ion-card-title>
+  </ion-card-header>
+  </ion-item>
+  <ion-item *ngFor="let item of dataScienceAndAI">
+  	<ion-checkbox disabled="false"></ion-checkbox><p> &nbsp;{{item}}</p>
+  </ion-item>
+</ion-card>
+<ion-card>
+	  <ion-item>
+	<ion-card-header>
+    <ion-card-title>Hybrid Data Management</ion-card-title>
+  </ion-card-header>
+  </ion-item>
+  <ion-item *ngFor="let item of hybridDataManagement">
+  	<ion-checkbox disabled="false"></ion-checkbox><p> &nbsp;{{item}}</p>
+  </ion-item>
+</ion-card>
+<ion-card>
+	  <ion-item>
+	<ion-card-header>
+    <ion-card-title>Unified Governance and Integration</ion-card-title>
+  </ion-card-header>
+  </ion-item>
+  <ion-item *ngFor="let item of unifiedGovernanceAndIntegration">
+  	<ion-checkbox disabled="false"></ion-checkbox><p> &nbsp;{{item}}</p>
+  </ion-item>
+</ion-card>
+<ion-card>
+	  <ion-item>
+	<ion-card-header>
+    <ion-card-title>Digital Business Automation</ion-card-title>
+  </ion-card-header>
+  </ion-item>
+  <ion-item *ngFor="let item of digitalBusinessAutomation">
+  	<ion-checkbox disabled="false"></ion-checkbox><p> &nbsp;{{item}}</p>
+  </ion-item>
+</ion-card>
+<ion-card>
+	  <ion-item>
+	<ion-card-header>
+    <ion-card-title>Management And Platform</ion-card-title>
+  </ion-card-header>
+  </ion-item>
+  <ion-item *ngFor="let item of managementAndPlatform">
+  	<ion-checkbox disabled="false"></ion-checkbox><p> &nbsp;{{item}}</p>
+  </ion-item>
+</ion-card>
+<ion-card>
+	  <ion-item>
+	<ion-card-header>
+    <ion-card-title>Data and AI on IBM Z</ion-card-title>
+  </ion-card-header>
+  </ion-item>
+  <ion-item *ngFor="let item of dataAndAIonIBMZ">
+  	<ion-checkbox disabled="false"></ion-checkbox><p> &nbsp;{{item}}</p>
+  </ion-item>
+</ion-card>
+<ion-card>
+	  <ion-item>
+	<ion-card-header>
+    <ion-card-title>IBM Cloud Platform</ion-card-title>
+  </ion-card-header>
+  </ion-item>
+  <ion-item *ngFor="let item of IBMCloudPlatform">
+  	<ion-checkbox disabled="false"></ion-checkbox><p> &nbsp;{{item}}</p>
+  </ion-item>
+</ion-card>
+<ion-card>
+	  <ion-item>
+	<ion-card-header>
+    <ion-card-title>IBM Security</ion-card-title>
+  </ion-card-header>
+  </ion-item>
+  <ion-item *ngFor="let item of IBMSecurity">
+  	<ion-checkbox disabled="false"></ion-checkbox><p> &nbsp;{{item}}</p>
+  </ion-item>
+</ion-card>
+<ion-card>
+	  <ion-item>
+	<ion-card-header>
+    <ion-card-title>IBM Cognitive Applications</ion-card-title>
+  </ion-card-header>
+  </ion-item>
+  <ion-item *ngFor="let item of IBMCognitiveApplications">
+  	<ion-checkbox disabled="false"></ion-checkbox><p> &nbsp;{{item}}</p>
+  </ion-item>
+</ion-card>
 </ion-content>
