--- a/src/app/acct-info/acct-info.page.html
+++ b/src/app/acct-info/acct-info.page.html
@@ -1,7 +1,7 @@
 <ion-header translucent>
       <ion-toolbar color="secondary">
       	 <ion-buttons slot="start" color="">
-          <ion-button>Go Back</ion-button>
+          <ion-button href="/home">Go Back</ion-button>
         </ion-buttons>
         <ion-title>Account Info: Company ABC</ion-title>
          <ion-buttons slot="primary" color="">
@@ -33,7 +33,7 @@
     <ion-button fill="outline" slot="end" href="/acct-info">Complete</ion-button>
   </ion-item>
 </ion-card>
-	<ion-card>
+	<ion-card href ="/questions">
 	  <ion-item>
 	<ion-card-header>
     <ion-card-title>Prospect Questions</ion-card-title>
@@ -50,10 +50,8 @@
   </ion-card-header>
     <ion-icon name="contacts" slot="start"></ion-icon>
     <ion-label text-wrap>Last Generated: 10-10-19</ion-label>
-    <ion-button fill="outline" slot="end" href="/acct-info">Complete</ion-button>
   </ion-item>
 </ion-card>
-<ion-button expand="block"> Generate New Report </ion-button>
 	 
 
 </ion-content>
