Added logic for cloud providers

--- a/src/app/acct-info/acct-info.page.html
+++ b/src/app/acct-info/acct-info.page.html
@@ -16,7 +16,7 @@
     <ion-card-title>IBM Entitled and Deployed Products</ion-card-title>
   </ion-card-header>
     <ion-icon name="contacts" slot="start"></ion-icon>
-    <ion-label text-wrap>{{account.date}}</ion-label>
+    <ion-label text-wrap>Last updated: {{account.date}}</ion-label>
     <ion-button fill="outline" slot="end">Complete</ion-button>
   </ion-item>
 </ion-card>
