--- a/src/app/cloud-info/cloud-info.page.html
+++ b/src/app/cloud-info/cloud-info.page.html
@@ -14,49 +14,49 @@
   </ion-card-header>
   </ion-item>
   <ion-item>
-  	<ion-checkbox disabled="false" (ionChange)="addValue($event, 'IBM Cloud')"></ion-checkbox><p> &nbsp;IBM Cloud</p>
+  	<ion-checkbox disabled="false" (ionChange)="addValue($event, 'IBM Cloud')" [checked]="hasCloud('IBM Cloud')"></ion-checkbox><p> &nbsp;IBM Cloud</p>
   </ion-item>
   <ion-item>
-  	<ion-checkbox disabled="false" (ionChange)="addValue($event, 'Amazon Web Services')"></ion-checkbox><p> &nbsp;Amazon Web Services</p>
+  	<ion-checkbox disabled="false" (ionChange)="addValue($event, 'Amazon Web Services')" [checked]="hasCloud('Amazon Web Services')"></ion-checkbox><p> &nbsp;Amazon Web Services</p>
   </ion-item>
 <ion-item>
-  	<ion-checkbox disabled="false" (ionChange)="addValue($event, 'Google')"></ion-checkbox><p> &nbsp;Google</p>
+  	<ion-checkbox disabled="false" (ionChange)="addValue($event, 'Google')" [checked]="hasCloud('Google')"></ion-checkbox><p> &nbsp;Google</p>
   </ion-item>
   <ion-item>
-  	<ion-checkbox disabled="false" (ionChange)="addValue($event, 'Microsoft')"></ion-checkbox><p> &nbsp;Microsoft</p>
+  	<ion-checkbox disabled="false" (ionChange)="addValue($event, 'Microsoft')" [checked]="hasCloud('Microsoft')"></ion-checkbox><p> &nbsp;Microsoft</p>
   </ion-item>
   <ion-item>
-  	<ion-checkbox disabled="false" (ionChange)="addValue($event, 'Other')"></ion-checkbox><p> &nbsp;Other</p>
+  	<ion-checkbox disabled="false" (ionChange)="addValue($event, 'Other')" [checked]="hasCloud('Other')"></ion-checkbox><p> &nbsp;Other</p>
   </ion-item>
   <ion-item>
   	<ion-checkbox disabled="false"></ion-checkbox><p> &nbsp;None</p>
   </ion-item>
 </ion-card>
 
-<ion-card *ngFor="let cloud of cloudsInUse">
+<ion-card *ngFor="let cloud of account.clouds; let i = index">
 	 <ion-item>
-    <ion-card-title>{{cloud}}</ion-card-title>
+    <ion-card-title>{{cloud.name}}</ion-card-title>
     </ion-item>
     <ion-item>
-  	<ion-checkbox disabled="false"></ion-checkbox><p> &nbsp;IaaS</p>
+  	<ion-checkbox disabled="false" (ionChange) = "updateService(i, 'IaaS')" [checked]="hasService(i, 'IaaS')"></ion-checkbox><p> &nbsp;IaaS</p>
   </ion-item>
   <ion-item>
-  	<ion-checkbox disabled="false"></ion-checkbox><p> &nbsp;PaaS</p>
+  	<ion-checkbox disabled="false" (ionChange) = "updateService(i, 'PaaS')" [checked]="hasService(i, 'PaaS')"></ion-checkbox><p> &nbsp;PaaS</p>
   </ion-item>
   <ion-item>
-  	<ion-checkbox disabled="false"></ion-checkbox><p> &nbsp;Storage</p>
+  	<ion-checkbox disabled="false" (ionChange) = "updateService(i, 'Storage')" [checked]="hasService(i, 'Storage')"></ion-checkbox><p> &nbsp;Storage</p>
   </ion-item>
   <ion-item>
-  	<ion-checkbox disabled="false"></ion-checkbox><p> &nbsp;AI</p>
+  	<ion-checkbox disabled="false" (ionChange) = "updateService(i, 'AI')" [checked]="hasService(i, 'AI')"></ion-checkbox><p> &nbsp;AI</p>
   </ion-item>
   <ion-item>
-  	<ion-checkbox disabled="false"></ion-checkbox><p> &nbsp;Analytics</p>
+  	<ion-checkbox disabled="false" (ionChange) = "updateService(i, 'Analytics')" [checked]="hasService(i, 'Analytics')"></ion-checkbox><p> &nbsp;Analytics</p>
   </ion-item>
   <ion-item>
-  	<ion-checkbox disabled="false"></ion-checkbox><p> &nbsp;Security</p>
+  	<ion-checkbox disabled="false" (ionChange) = "updateService(i, 'Security')" [checked]="hasService(i, 'Security')"></ion-checkbox><p> &nbsp;Security</p>
   </ion-item>
   <ion-item>
-  	<ion-checkbox disabled="false"></ion-checkbox><p> &nbsp;Kubernetes</p>
+  	<ion-checkbox disabled="false" (ionChange) = "updateService(index, 'Kubernetes')" [checked]="hasService(i, 'Kubernetes')"></ion-checkbox><p> &nbsp;Kubernetes</p>
   </ion-item>
 </ion-card>
 
