--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header translucent>
       <ion-toolbar color="secondary">
 
-        <ion-title>IBM SCL Sales Enablement Tool</ion-title>
+        <ion-title>IBM SCL Questioning Model</ion-title>
 
         <ion-buttons slot="primary" color="">
           <ion-button fill="outline" color="light" (click)="presentAlert()">
