--- a/src/app/questions/questions.page.html
+++ b/src/app/questions/questions.page.html
@@ -9,17 +9,17 @@
 <ion-content>
 
 
-  <ion-item *ngFor= "let item of cloudPakForData; let i = index">
+  <ion-item *ngFor= "let item of cloudPakForData">
     {{item[0]}}
-	<ion-item *ngFor = "let choice of item | slice:1">
-  	<ion-checkbox disabled="false" (ionChange)="updateVMWare($event)" [checked]="hasItem(item)"></ion-checkbox> &nbsp;{{choice}}
+	<ion-item *ngFor = "let choice of item | slice:1; let i = index">
+  	<ion-checkbox disabled="false" (ionChange)="updateItem($event, choice, item)" [checked]="(hasItem(item) && i == 0)" ></ion-checkbox> &nbsp;{{choice}}
  	 </ion-item>
 </ion-item>
 
   <ion-item *ngFor= "let item of cloudPakForApplications; let i = index">
     {{item[0]}}
 	<ion-item *ngFor = "let choice of item | slice:1;">
-  	<ion-checkbox disabled="false" (ionChange)="updateVMWare($event)"></ion-checkbox> &nbsp;{{choice}}
+  	<ion-checkbox disabled="false" (ionChange)="updateItem($event, choice, item)"></ion-checkbox> &nbsp;{{choice}}
  	 </ion-item>
 </ion-item>
 
