--- a/src/app/cloud-info/cloud-info.page.html
+++ b/src/app/cloud-info/cloud-info.page.html
@@ -56,7 +56,7 @@
   	<ion-checkbox disabled="false" (ionChange) = "updateService(i, 'Security')" [checked]="hasService(i, 'Security')"></ion-checkbox><p> &nbsp;Security</p>
   </ion-item>
   <ion-item>
-  	<ion-checkbox disabled="false" (ionChange) = "updateService(index, 'Kubernetes')" [checked]="hasService(i, 'Kubernetes')"></ion-checkbox><p> &nbsp;Kubernetes</p>
+  	<ion-checkbox disabled="false" (ionChange) = "updateService(i, 'Kubernetes')" [checked]="hasService(i, 'Kubernetes')"></ion-checkbox><p> &nbsp;Kubernetes</p>
   </ion-item>
 </ion-card>
 
