--- a/src/app/entitled-deployed/entitled-deployed.page.html
+++ b/src/app/entitled-deployed/entitled-deployed.page.html
@@ -8,94 +8,15 @@
     </ion-header>
 
 <ion-content>
-<ion-card>
-	  <ion-item>
-	<ion-card-header>
-    <ion-card-title>Data Science and AI</ion-card-title>
+
+<ion-card *ngFor="let category of products">
+    <ion-item>
+  <ion-card-header>
+    <ion-card-title>{{category.doc.name}}</ion-card-title>
   </ion-card-header>
   </ion-item>
-  <ion-item *ngFor="let item of dataScienceAndAI">
-  	<ion-checkbox disabled="false" (ionChange)="checkedItem($event, item)" [checked]="hasItem(item)"></ion-checkbox><p> &nbsp;{{item}}</p>
-  </ion-item>
-</ion-card>
-<ion-card>
-	  <ion-item>
-	<ion-card-header>
-    <ion-card-title>Hybrid Data Management</ion-card-title>
-  </ion-card-header>
-  </ion-item>
-  <ion-item *ngFor="let item of hybridDataManagement">
-  	<ion-checkbox disabled="false" (ionChange)="checkedItem($event, item)" [checked]="hasItem(item)"></ion-checkbox><p> &nbsp;{{item}}</p>
-  </ion-item>
-</ion-card>
-<ion-card>
-	  <ion-item>
-	<ion-card-header>
-    <ion-card-title>Unified Governance and Integration</ion-card-title>
-  </ion-card-header>
-  </ion-item>
-  <ion-item *ngFor="let item of unifiedGovernanceAndIntegration">
-  	<ion-checkbox disabled="false" (ionChange)="checkedItem($event, item)" [checked]="hasItem(item)"></ion-checkbox><p> &nbsp;{{item}}</p>
-  </ion-item>
-</ion-card>
-<ion-card>
-	  <ion-item>
-	<ion-card-header>
-    <ion-card-title>Digital Business Automation</ion-card-title>
-  </ion-card-header>
-  </ion-item>
-  <ion-item *ngFor="let item of digitalBusinessAutomation">
-  	<ion-checkbox disabled="false" (ionChange)="checkedItem($event, item)" [checked]="hasItem(item)"></ion-checkbox><p> &nbsp;{{item}}</p>
-  </ion-item>
-</ion-card>
-<ion-card>
-	  <ion-item>
-	<ion-card-header>
-    <ion-card-title>Management And Platform</ion-card-title>
-  </ion-card-header>
-  </ion-item>
-  <ion-item *ngFor="let item of managementAndPlatform">
-  	<ion-checkbox disabled="false" (ionChange)="checkedItem($event, item)" [checked]="hasItem(item)"></ion-checkbox><p> &nbsp;{{item}}</p>
-  </ion-item>
-</ion-card>
-<ion-card>
-	  <ion-item>
-	<ion-card-header>
-    <ion-card-title>Data and AI on IBM Z</ion-card-title>
-  </ion-card-header>
-  </ion-item>
-  <ion-item *ngFor="let item of dataAndAIonIBMZ">
-  	<ion-checkbox disabled="false" (ionChange)="checkedItem($event, item)" [checked]="hasItem(item)"></ion-checkbox><p> &nbsp;{{item}}</p>
-  </ion-item>
-</ion-card>
-<ion-card>
-	  <ion-item>
-	<ion-card-header>
-    <ion-card-title>IBM Cloud Platform</ion-card-title>
-  </ion-card-header>
-  </ion-item>
-  <ion-item *ngFor="let item of IBMCloudPlatform">
-  	<ion-checkbox disabled="false" (ionChange)="checkedItem($event, item)" [checked]="hasItem(item)"></ion-checkbox><p> &nbsp;{{item}}</p>
-  </ion-item>
-</ion-card>
-<ion-card>
-	  <ion-item>
-	<ion-card-header>
-    <ion-card-title>IBM Security</ion-card-title>
-  </ion-card-header>
-  </ion-item>
-  <ion-item *ngFor="let item of IBMSecurity">
-  	<ion-checkbox disabled="false" (ionChange)="checkedItem($event, item)" [checked]="hasItem(item)"></ion-checkbox><p> &nbsp;{{item}}</p>
-  </ion-item>
-</ion-card>
-<ion-card>
-	  <ion-item>
-	<ion-card-header>
-    <ion-card-title>IBM Cognitive Applications</ion-card-title>
-  </ion-card-header>
-  </ion-item>
-  <ion-item *ngFor="let item of IBMCognitiveApplications">
-  	<ion-checkbox disabled="false" (ionChange)="checkedItem($event, item)" [checked]="hasItem(item)"></ion-checkbox><p> &nbsp;{{item}}</p>
+  <ion-item *ngFor="let product of category.doc.products">
+    <ion-checkbox disabled="false" (ionChange)="checkedItem($event, item)" [checked]="hasItem(item)"></ion-checkbox><p> &nbsp;{{product}}</p>
   </ion-item>
 </ion-card>
 </ion-content>
